[package]
name = "cmdline_words_parser"
version = "0.0.1"
authors = [ "John Hodge <tpg@mutabah.net>" ]
description = "Provides iterators over 'words' in a string, using command-line escaping rules"
repository = "https://github.com/thepowersgang/cmdline_words_parser"
readme = "README.md"
keywords = ["command line", "parser", "words"]
license = "MIT"

